--- a/index.html
+++ b/index.html
@@ -60,27 +60,8 @@
                 </p>
             </section>
             <section class="columna">
-                <p>Integrantes:
-                    <ul>
-                        <li>
-                            Ismael Abraham Ávila Lona
-                        </li>
-                        <li>
-                            Mauricio Zamudio Juárez
-                        </li>
-                        <li>
-                            Luz Atziri Moreno Sánchez
-                        </li>
-                        <li>
-                            Brian Yesua Crespo Alcocer
-                        </li>
-                        <li>
-                            Andrea Abigail Martinez Salazar
-                        </li>
-                        <li>
-                            José Luis Estrada Juárez
-                        </li>
-                    </ul>
+                <p class="texto">
+                    Este martes 2 de Julio en el plantel Buenos Aires del CETAC 12
                 </p>
             </section>
         </article>
